@@ -20,13 +20,14 @@ fi
 
 LICENSE="BSD"
 SLOT="0"
-IUSE="test"
+IUSE="doc test"
 
 RDEPEND="
 	dev-python/ipykernel[${PYTHON_USEDEP}]
 	dev-python/jupyter_client[${PYTHON_USEDEP}]
 	"
 DEPEND="${RDEPEND}
+	doc? ( dev-python/sphinx[${PYTHON_USEDEP}] )
 	test? (
 		>=dev-python/nose-0.10.1[${PYTHON_USEDEP}]
 	)
@@ -40,6 +41,24 @@ DEPEND="${RDEPEND}
 	"
 PDEPEND="dev-python/ipython[${PYTHON_USEDEP}]"
 
+python_prepare_all() {
+	# Prevent un-needed download during build
+	if use doc; then
+		sed -e "/^    'sphinx.ext.intersphinx',/d" -i docs/source/conf.py || die
+	fi
+
+	distutils-r1_python_prepare_all
+}
+
+python_compile_all() {
+	use doc && emake -C docs html
+}
+
 python_test() {
 	nosetests --with-coverage --cover-package qtconsole qtconsole || die
+}
+
+python_install_all() {
+	use doc && HTML_DOCS=( docs/build/html/. )
+	distutils-r1_python_install_all
 }
