@@ -2,6 +2,9 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+  02 Sep 2015; Sean Vig <sean.v.775@gmail.com> qtconsole-9999.ebuild:
+  dev-python/qtconsole: Add doc use flag
+
   25 Aug 2015; Marius Brehler <marbre@linux.sungazer.de> qtconsole-9999.ebuild:
   dev-python/qtconsole: Take over DEPEND from ipython
 
